5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1745_3096.log
== TEST (2019-05-15 15:17:29) 
-- CODE:
n = int(input(":"))

i = 0
aux = 1

while(n != 0):
	if(n == 1):
		p = 20
	elif(n == 2):
		p = 15
	elif(n == 3):
		p = 10



-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:56) 
-- CODE:
n = int(input(":"))

i = 0
aux = 1

while(n != 0):
	if(n == 1):
		p1 = 20
	elif(n == 2):
		p2 = 15
	elif(n == 3):
		p3 = 10
	elif(n == 4):
		p4 = 7
	elif(n == 5):
		p5 = 6
	elif(n == 6):
		p6 = 5
	elif(n == 7):
		p7 = 4
	elif(n == 8):
		p8 = 3
	elif(n == 9):
		p9 = 2
	elif(n == 10):
		p10 = 1
		n = int(input(":"))


	


-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:05) 
-- CODE:
n = int(input(":"))

i = 0
aux = 1

while(n != 0):
	if(n == 1):
		p1 = 20
	elif(n == 2):
		p2 = 15
	elif(n == 3):
		p3 = 10
	elif(n == 4):
		p4 = 7
	elif(n == 5):
		p5 = 6
	elif(n == 6):
		p6 = 5
	elif(n == 7):
		p7 = 4
	elif(n == 8):
		p8 = 3
	elif(n == 9):
		p9 = 2
	elif(n == 10):
		p10 = 1
		n = int(input(":"))


	


-- OUTPUT:
0.996783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:48) 
-- CODE:
n = int(input(":"))

i = 0
aux = 1

while(n != 0 and n > 0):
	if(n == 1):
		p1 = 20
	elif(n == 2):
		p2 = 15
	elif(n == 3):
		p3 = 10
	elif(n == 4):
		p4 = 7
	elif(n == 5):
		p5 = 6
	elif(n == 6):
		p6 = 5
	elif(n == 7):
		p7 = 4
	elif(n == 8):
		p8 = 3
	elif(n == 9):
		p9 = 2
	elif(n == 10):
		p10 = 1
		n = int(input(":"))
	c = p1 + p2 + p3


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:56) 
-- CODE:
n = int(input(":"))

i = 0
aux = 1

while(n != 0 and n > 0):
	if(n == 1):
		p1 = 20
	elif(n == 2):
		p2 = 15
	elif(n == 3):
		p3 = 10
	elif(n == 4):
		p4 = 7
	elif(n == 5):
		p5 = 6
	elif(n == 6):
		p6 = 5
	elif(n == 7):
		p7 = 4
	elif(n == 8):
		p8 = 3
	elif(n == 9):
		p9 = 2
	elif(n == 10):
		p10 = 1
		n = int(input(":"))
	c = p1 + p2 + p3
print(c)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:29) 
-- CODE:
n = int(input(":"))

i = 0
aux = 1

while(n != 0 and n > 0):
	if(n == 1):
		print(20)
	elif(n == 2):
		p2 = 15
	elif(n == 3):
		p3 = 10
	elif(n == 4):
		p4 = 7
	elif(n == 5):
		p5 = 6
	elif(n == 6):
		p6 = 5
	elif(n == 7):
		p7 = 4
	elif(n == 8):
		p8 = 3
	elif(n == 9):
		p9 = 2
	elif(n == 10):
		p10 = 1
		n = int(input(":"))
	c = p1 + p2 + p3
print(c)


	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
